{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 112,
  "lineage": "593ffd3f-5bb8-c4be-aa78-a0d3f7abfdbb",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/anttech3/zones/us-central1-b/instanceGroups/terraform-test",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-01-24T23:51:41.420-08:00",
            "custom_request_headers": [
              "X-Client-Geo-Location: {client_region_subdivision}, {client_city}"
            ],
            "custom_response_headers": [
              "X-Cache-Hit: {cdn_cache_status}"
            ],
            "enable_cdn": true,
            "fingerprint": "t_75frkFlJk=",
            "generated_id": 5125093613167796578,
            "health_checks": [
              "projects/anttech3/global/healthChecks/autohealing-health-check"
            ],
            "id": "projects/anttech3/global/backendServices/l7-xlb-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-backend-service",
            "port_name": "my-port",
            "project": "anttech3",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anttech3/global/backendServices/l7-xlb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.test",
            "google_compute_instance_template.tpl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-24T23:22:16.989-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/anttech3/global/firewalls/allow-http-my-firewall-rule",
            "log_config": [],
            "name": "allow-http-my-firewall-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/anttech3/global/networks/vpc-network",
            "priority": 1000,
            "project": "anttech3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anttech3/global/firewalls/allow-http-my-firewall-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.227.213.3",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-24T23:47:32.802-08:00",
            "id": "projects/anttech3/global/addresses/l7-xlb-static-ip",
            "name": "l7-xlb-static-ip",
            "prefix_length": 0,
            "project": "anttech3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anttech3/global/addresses/l7-xlb-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/anttech3/global/forwardingRules/l7-xlb-forwarding-rule",
            "ip_address": "projects/anttech3/global/addresses/l7-xlb-static-ip",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-forwarding-rule",
            "port_range": "80",
            "project": "anttech3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anttech3/global/forwardingRules/l7-xlb-forwarding-rule",
            "target": "projects/anttech3/global/targetHttpProxies/l7-xlb-target-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_global_address.default",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.test",
            "google_compute_instance_template.tpl",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/anttech3/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "project": "anttech3",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anttech3/global/networks/vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "custom-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-24T23:22:17.602-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/anttech3/regions/us-central1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/anttech3/global/networks/vpc-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "anttech3",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anttech3/regions/us-central1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "custom-test1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-24T23:22:17.329-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/anttech3/regions/us-east1/subnetworks/private-subnet2",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "private-subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/anttech3/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "anttech3",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anttech3/regions/us-east1/subnetworks/private-subnet2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-24T23:52:15.310-08:00",
            "id": "projects/anttech3/global/targetHttpProxies/l7-xlb-target-http-proxy",
            "name": "l7-xlb-target-http-proxy",
            "project": "anttech3",
            "proxy_bind": false,
            "proxy_id": 7688747854004576576,
            "self_link": "https://www.googleapis.com/compute/v1/projects/anttech3/global/targetHttpProxies/l7-xlb-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/anttech3/global/urlMaps/l7-xlb-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.test",
            "google_compute_instance_template.tpl",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-24T23:52:03.513-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/anttech3/global/backendServices/l7-xlb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "L2WSxpAG2MY=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/anttech3/global/urlMaps/l7-xlb-url-map",
            "map_id": 9145663896827027788,
            "name": "l7-xlb-url-map",
            "path_matcher": [],
            "project": "anttech3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anttech3/global/urlMaps/l7-xlb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.test",
            "google_compute_instance_template.tpl"
          ]
        }
      ]
    }
  ]
}